Improved UI so it does not look that ugly and added update user option

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<app-test-component></app-test-component>
-<app-add-item-component></app-add-item-component>
-<app-delete-component></app-delete-component>
+<div class="main">
+    <div class="top">GraphQL simple CRUD test</div>
+    <div class="centerContent">
+        <div class="left">
+            <app-test-component></app-test-component>
+        </div>
+        <div class="right">
+            <app-add-item-component></app-add-item-component>
+            <app-delete-component></app-delete-component>
+            <app-update-item></app-update-item>
+        </div>
+    </div>
+    
+</div>
