--- a/src/app/components/add-item-component/add-item-component.component.html
+++ b/src/app/components/add-item-component/add-item-component.component.html
@@ -1,8 +1,8 @@
-<p>add-item-component works!</p>
+<p>Insert name and email of new user</p>
 <form (ngSubmit)="submit()">
     <label for="n">Name</label>
     <input name="n" type="text" [(ngModel)]="name">
     <label for="e">Email</label>
     <input name="e" type="text" [(ngModel)]="email">
-    <button type="submit">Dodaj</button>
+    <button type="submit">Add</button>
 </form>
