--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    box-sizing: border-box;
+    margin: 0;
+    height: 100%;
+}
+
+.right p {
+    font-size: 24px;
+}
+
+.right form {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.right input {
+    height: 25px;
+}
+
+.right label {
+    padding: 2%;
+    font-size: 20px;
+}
+
+.right button {
+    margin-left: 5px;
+    padding: 8px;
+}
